# legendary-sniffle

./: .env.example  .gitignore  README.md  mcp_servers.example.json  pyproject.toml
.github/workflows/: ci.yml
assistant/: __init__.py  advisor.py  agent.py  apple_bridge.py  briefing.py  cli.py  config.py  consolidate.py  db.py  doctor.py  engine.py  gui.py  history.py  insights.py  log.py  mac_tools.py  macmeta.py  memory.py  notify.py  observer.py  ollama.py  scheduled.py  tasks.py  toolcore.py  toolkit.py  tools.py  util.py  watch.py
assistant/proactive/: __init__.py  checks.py  core.py  run.py  store.py
assistant/static/: chat.html
bridge/: aide-fm.swift  build.sh
scripts/: build_app.py  connect_google.py  install_briefing_cron.sh  install_macos.sh
tests/: conftest.py  test_advisor.py  test_apple_bridge.py  test_config.py  test_doctor.py  test_engine.py  test_foundation_engine.py  test_gui_bridge.py  test_history.py  test_macmeta.py  test_memory.py  test_notify.py  test_observer.py  test_ollama_client.py  test_proactive.py  test_scheduled.py  test_security.py  test_tasks.py  test_toolkit.py  test_watch.py
