[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant"
version = "0.1.0"
description = "A deeply integrated personal assistant — Claude brain by default, local Ollama optional"
requires-python = ">=3.10"
# Upper bounds keep a breaking minor release from silently breaking the app;
# bump them deliberately after testing.
dependencies = [
    "httpx>=0.27,<1",               # Ollama client + web tools
    "claude-agent-sdk>=0.1.0,<0.2", # default Claude backend
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# On-device Apple Foundation model backend (ASSISTANT_BACKEND=apple); macOS 26+
# with Apple Intelligence enabled. The OS owns the weights, so nothing heavy is
# pulled into the app process.
apple = ["apple-fm-sdk>=0.2,<1; sys_platform == 'darwin'"]
gui = [
    "pywebview>=5.0,<7",
    "pynput>=1.7,<2",
    "pyobjc-framework-Vision>=10; sys_platform == 'darwin'",
]

[project.scripts]
assistant = "assistant.cli:run"
assistant-gui = "assistant.gui:run"
assistant-doctor = "assistant.doctor:run"
assistant-briefing = "assistant.briefing:run"
assistant-insights = "assistant.insights:run"
assistant-consolidate = "assistant.consolidate:run"
assistant-proactive = "assistant.proactive.run:run"

[tool.setuptools.packages.find]
include = ["assistant*"]

[tool.setuptools.package-data]
assistant = ["static/*.html"]
